# sigil-language

./: .gitignore  LICENSE  LICENSE.MIT  README.md
.spell/: en.utf8.add  en.utf8.add.spl
banish/: Cargo.toml
banish/src/: lib.rs
banish_derive/: Cargo.toml
banish_derive/banish_derive/src/: lib.rs
banish_derive/src/: lib.rs
docs/: README.md
sigil/: Cargo.toml  hello_world_feature_test.txt  hello_world_optimal.txt  interpreter.py  run.py
sigil/.spell/: en.utf8.add  en.utf8.add.spl
sigil/src/: errors.rs  main.rs  parser.rs
sigil/tests/: hello_world_test.sigil  hello_world_test.txt  math_test.sigil  math_test.txt  strings_test.sigil  strings_test.txt
