[package]
name = "banish"
version = "1.1.4"
edition = "2024"
description = "A declarative DSL, for defining rule-based state machines."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/LoganFlaherty/banish"
repository = "https://github.com/LoganFlaherty/banish"
readme = "README.md"
keywords = ["state-machine", "dsl", "declarative", "rules-engine"]

[dependencies]
banish_derive = "1.1.4"